2.0.0a19
 - fix plot matrix: size and buttons of elements
 - populate help menu
 - refactor scatter plot
 - show isoelastics in QuickView
 - introduce style sheets
 - fix box filter view not updated with filter data
 - add list of features to QuickView/Event as a new tab
 - other minor fixes
2.0.0a18
 - replace push buttons with tool buttons
   (try to overcome ugly rendering on macOS)
 - fix block matrix: toggle did not work without QuickView
 - make menu->quit functional
 - add help message in QuickView explaining how it works
 - add experimental zoom checkbox for trace view
 - additional refactoring
2.0.0a17
 - implement data/plot matrix states
 - implement data/plot matrix logic
 - implement basic Quick View functionalities
 - implement basic filtering functionalities
2.0.0a16
 - add documentation (from Shape-Out 1)
 - test deployment for macOS
2.0.0a1
 - first preview